refactor: 201 요청에 Location 헤더 추가
