# openapi.yaml
@@ -51,6 +51,11 @@ paths:
       responses:
         '201':
           description: Created
+          headers:
+            Location:
+              description: URI of created resource
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -172,6 +177,11 @@ paths:
       responses:
         '201':
           description: Created
+          headers:
+            Location:
+              description: URI of created resource
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -200,6 +210,11 @@ paths:
       responses:
         '201':
           description: Created
+          headers:
+            Location:
+              description: URI of created resource
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -256,6 +271,11 @@ paths:
       responses:
         '201':
           description: Created
+          headers:
+            Location:
+              description: URI of created resource
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -363,6 +383,11 @@ paths:
       responses:
         '201':
           description: Created
+          headers:
+            Location:
+              description: URI of created resource
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -466,6 +491,11 @@ paths:
       responses:
         '201':
           description: Created
+          headers:
+            Location:
+              description: URI of created resource
+              schema:
+                type: string
           content:
             application/json:
               schema:
